--- a/my-app/package.json
+++ b/my-app/package.json
@@ -45,6 +45,7 @@
     }
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
