--- a/my-app/package.json
+++ b/my-app/package.json
@@ -46,7 +46,9 @@
   },
   "dependencies": {
     "child_process": "^1.0.2",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-squirrel-startup": "^1.0.0",
+    "os-utils": "0.0.14"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.64",
