--- a/react-electron/package.json
+++ b/react-electron/package.json
@@ -53,10 +53,6 @@
     ]
   },
   "devDependencies": {
-    "electron": "^19.0.9",
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.3",
-    "electron-builder": "^22.9.1",
-    "wait-on": "^5.2.1"
+    "electron": "^19.0.9"
   }
 }
