--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "electron-forge start",
     "start:reactone": "react-scripts start",
@@ -63,6 +64,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.64",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
+    "@types/react": "^18.0.17",
     "babel-loader": "^8.2.5",
     "electron": "19.0.9",
     "file-loader": "^6.2.0",
