--- a/my-app/package.json
+++ b/my-app/package.json
@@ -53,7 +53,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "os-utils": "0.0.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
