se agrega libreria serial port

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -54,7 +54,8 @@
     "os-utils": "0.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-resize-detector": "^7.1.2"
+    "react-resize-detector": "^7.1.2",
+    "serialport": "^10.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
