--- a/my-app/package.json
+++ b/my-app/package.json
@@ -55,6 +55,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-resize-detector": "^7.1.2",
+    "react-router-dom": "^6.4.2",
     "serialport": "^10.4.0"
   },
   "devDependencies": {
