--- a/my-app/package.json
+++ b/my-app/package.json
@@ -53,6 +53,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "os-utils": "0.0.14",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.4.2",
