--- a/my-app/package.json
+++ b/my-app/package.json
@@ -57,7 +57,8 @@
     "react-dom": "^18.2.0",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.4.2",
-    "serialport": "^10.4.0"
+    "serialport": "^10.4.0",
+    "sweetalert2": "^11.6.15"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
